--- a/src/pages/give-car/give-car.html
+++ b/src/pages/give-car/give-car.html
@@ -1,18 +1,31 @@
-<!--
-  Generated template for the GiveCar page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>GiveCar</ion-title>
-  </ion-navbar>
-
+    <ion-navbar>
+        <!--<ion-icon name="menu" menuToggle padding></ion-icon>-->
+        <ion-title>REQUESTS</ion-title>
+    </ion-navbar>
 </ion-header>
-
-
-<ion-content padding>
-
+<ion-content *ngIf="_transactions?.data" padding>
+    <ion-list *ngFor="let transaction of _transactions.data">
+        <ion-item *ngIf="transaction.request_type == 1">
+            <ion-thumbnail item-left>
+                <img src="../../assets/img/lunar.jpg">
+            </ion-thumbnail>
+            <h2>Destination : {{ transaction.location?.name }} </h2>
+            <p>Price : RM {{ transaction?.price }}</p>
+            <p>Pickup Time : {{ transaction?.pickup_time }}</p>
+            <button ion-button clear item-right (click)="showConfirm(transaction?.id)">Accept</button>
+        </ion-item>
+        <ion-item *ngIf="transaction.request_type == 2">
+            <ion-thumbnail item-left>
+                <img src="../../assets/img/car.jpeg">
+            </ion-thumbnail>
+            <h2> {{ transaction.location?.name }} </h2>
+            <p>Price : RM {{ transaction?.price }}</p>
+            <button ion-button clear item-right (click)="showConfirm()">Accept</button>
+        </ion-item>
+    </ion-list>
+    <ion-list>
+        <br><br><br>
+        <h1 *ngIf="_transactions.data.length < 1">No transactions made yet</h1>
+    </ion-list>
 </ion-content>
