--- a/src/pages/modal-choose-pickup-location/modal-choose-pickup-location.html
+++ b/src/pages/modal-choose-pickup-location/modal-choose-pickup-location.html
@@ -17,7 +17,8 @@
     <ion-grid>
         <ion-row style="text-align: center">
             <ion-col width-100>
-                <ion-input type="text" style="font-size: xx-large" [(ngModel)]="pickup_location" placeholder="Pickup Location"></ion-input>
+                <ion-label>Pickup Location : </ion-label>
+                <ion-input type="text" style="font-size: x-large" [(ngModel)]="pickup_location" placeholder="Eg: L01 KTHO"></ion-input>
             </ion-col>
         </ion-row>
     </ion-grid>
