--- a/src/pages/modal-choose-time/modal-choose-time.html
+++ b/src/pages/modal-choose-time/modal-choose-time.html
@@ -17,10 +17,10 @@
     <ion-grid style="text-align: center">
         <ion-row>
             <ion-col width-48 class="center">
-                <ion-input type="number" max="24" min="00" placeholder="00" [(ngModel)]="hour"></ion-input>
+                <ion-input type="number" max="24" min="00" placeholder="HH" [(ngModel)]="hour"></ion-input>
             </ion-col>
             <ion-col width-48 class="center">
-                <ion-input type="number" max="60" min="00" placeholder="00" [(ngModel)]="minute"></ion-input>
+                <ion-input type="number" max="60" min="00" placeholder="MM" [(ngModel)]="minute"></ion-input>
             </ion-col>
         </ion-row>
         <ion-row>
