Commit many changes

--- a/src/pages/control-messages/control-messages.html
+++ b/src/pages/control-messages/control-messages.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the Request page.
+  Generated template for the ControlMessages page.
 
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Request</ion-title>
+    <ion-title>ControlMessages</ion-title>
   </ion-navbar>
 
 </ion-header>
