--- a/src/pages/modal-choose-time/modal-choose-time.html
+++ b/src/pages/modal-choose-time/modal-choose-time.html
@@ -32,6 +32,11 @@
             </ion-col>
         </ion-row>
     </ion-grid>
+
+    <!--<ion-item>
+        <ion-label>Date</ion-label>
+        <ion-datetime displayFormat="hh:mm A"></ion-datetime>
+    </ion-item>-->
     <button ion-button full class="input submit" (click)="dismiss()">SUBMIT</button>
 
 </ion-content>
