--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -4,25 +4,39 @@
         <ion-title>Dashboard</ion-title>
     </ion-navbar>
 </ion-header>
-<ion-content class="card-background-page" *ngIf="user">
+<ion-content class="card-background-page">
+    <ion-refresher (ionRefresh)="doRefresh($event)">
+        <ion-refresher-content></ion-refresher-content>
+    </ion-refresher>
     <ion-card>
         <img src="assets/icon/universe.png" />
-        <div class="card-title">Ride Takens : RM {{ dashboard?.ride_takens }}</div>
+        <div class="card-title">Ride Takens : {{ dashboard?.ride_takens }}</div>
         <div class="card-subtitle" style="font-size: x-large">Payments : RM {{ dashboard?.ride_takens_price }}</div>
     </ion-card>
-    <ion-card *ngIf="user.role_id == 3">
+    <ion-card *ngIf="user?.role_id == 3">
         <img src="assets/icon/universe.png" />
-        <div class="card-title">Ride Givens : RM {{ dashboard?.ride_givens }}</div>
+        <div class="card-title">Ride Givens : {{ dashboard?.ride_givens }}</div>
         <div class="card-subtitle">Payments : RM {{ dashboard?.ride_givens_price }}</div>
     </ion-card>
     <ion-card>
-       <img src="assets/icon/sky-night-space-trees.jpeg" />
-        <div class="card-title">Rent Takens : RM {{ dashboard?.rent_takens }}</div>
+        <img src="assets/icon/sky-night-space-trees.jpeg" />
+        <div class="card-title">Rent Takens : {{ dashboard?.rent_takens }}</div>
         <div class="card-subtitle">Payments : RM {{ dashboard?.rent_takens_price }}</div>
     </ion-card>
-    <ion-card *ngIf="user.role_id == 3">
+    <ion-card *ngIf="user?.role_id == 3">
         <img src="assets/icon/sky-night-space-trees.jpeg" />
-        <div class="card-title">Rent Givens : RM {{ dashboard?.rent_givens }}</div>
+        <div class="card-title">Rent Givens : {{ dashboard?.rent_givens }}</div>
         <div class="card-subtitle">Payments : RM {{ dashboard?.rent_givens_price }}</div>
     </ion-card>
+    <ion-list>
+        <ion-item>
+            <ion-note item-left>
+                Left Note
+            </ion-note>
+            My Item
+            <ion-note item-right>
+                Right Note
+            </ion-note>
+        </ion-item>
+    </ion-list>
 </ion-content>
