--- a/src/pages/history/history.html
+++ b/src/pages/history/history.html
@@ -1,25 +1,29 @@
 <ion-header>
     <ion-navbar>
         <!--<ion-icon name="menu" menuToggle padding></ion-icon>-->
-        <ion-title>MY TRANSACTION</ion-title>
+        <ion-title>MY HISTORY</ion-title>
     </ion-navbar>
 </ion-header>
 <ion-content *ngIf="_transactions?.data" padding>
     <ion-list *ngFor="let transaction of _transactions.data">
         <ion-item *ngIf="transaction.request_type == 1">
             <ion-thumbnail item-left>
-                <img src="../../assets/img/lunar.jpg">
+                <img src="{{ transaction.location?.file_path}}" *ngIf="transaction.location?.file_path">
+                <img src="assets/img/b_no_image_icon.gif" *ngIf="transaction.location?.file_path == null">
             </ion-thumbnail>
             <h2>Destination : {{ transaction.location?.name }} </h2>
-            <p>Price : RM {{ transaction?.price }}</p>
+            <p>Pickup Location : {{ transaction?.pickup_location }}</p>
             <p>Pickup Time : {{ transaction?.pickup_time }}</p>
+            <p>Price : RM {{ transaction?.price }}</p>            
             <button *ngIf="transaction.owner != null" ion-button clear item-right>View</button>
         </ion-item>
         <ion-item *ngIf="transaction.request_type == 2">
             <ion-thumbnail item-left>
-                <img src="../../assets/img/car.jpeg">
+                <img src="assets/img/transportation.png">
             </ion-thumbnail>
-            <h2> {{ transaction.location?.name }} </h2>
+            <h2>Rent Duration : {{ transaction.duration }}</h2>
+            <p>Pickup Location : {{ transaction?.pickup_location }}</p>            
+            <p>Pickup Time : {{ transaction?.pickup_time }}</p>            
             <p>Price : RM {{ transaction?.price }}</p>
             <button *ngIf="transaction.owner != null" ion-button clear item-right>View</button>
         </ion-item>
