--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
 
     <!-- The bundle js is generated during the build process -->
     <script src="build/main.js"></script>
-    <script src="http://maps.google.com/maps/api/js"></script>
+    <!--<script src="http://maps.google.com/maps/api/js"></script>-->
 
 </body>
 
