--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,7 @@
     <!-- The bundle js is generated during the build process -->
     <script src="build/main.js"></script>
     <!--<script src="http://maps.google.com/maps/api/js"></script>-->
+    <script src="http://maps.google.com/maps/api/js?key=AIzaSyDUkgjuoLswQLC8m9SeWWr8hoES3PZ3Ark&libraries=places"></script>
 
 </body>
 
