--- a/src/pages/google-maps/google-maps.html
+++ b/src/pages/google-maps/google-maps.html
@@ -1,16 +1,36 @@
 <ion-header>
-
     <ion-navbar>
-        <ion-title>GoogleMaps</ion-title>
+        <ion-title>
+            Map
+        </ion-title>
         <ion-buttons end>
             <button ion-button (click)="addMarker()"><ion-icon name="add"></ion-icon>Add Marker</button>
         </ion-buttons>
     </ion-navbar>
-
 </ion-header>
 
+<ion-content>
+    <!--<input id="pac-input" class="controls" type="text" placeholder="Search Box">
+    <div #map id="map" (click)="getCoords()"></div>-->
 
-<ion-content padding>
-    <div #map id="map" style="height:100%;"></div>
-
+    <ion-list>
+        <ion-item>
+            <ion-label>Destination</ion-label>
+            <ion-select [(ngModel)]="destination">
+                <ion-option value="Westminster, London, UK">Westminster, London, UK</ion-option>
+                <ion-option value="51.498739, -0.133827">51.49,-0.13 (Westminster)</ion-option>
+            </ion-select>
+        </ion-item>
+        <ion-item>
+            <ion-label>Start</ion-label>
+            <ion-select [(ngModel)]="start">
+                <ion-option value="">None (current location)</ion-option>
+                <ion-option value="Manchester, UK">Manchester, UK</ion-option>
+                <ion-option value="53.493002,-2.240080">53.49,-2.24 (Manchester)</ion-option>
+            </ion-select>
+        </ion-item>
+        <ion-item>
+            <button ion-button (click)="navigate()">Navigate</button>
+        </ion-item>
+    </ion-list>
 </ion-content>
