--- a/src/pages/view-accepted-request/view-accepted-request.html
+++ b/src/pages/view-accepted-request/view-accepted-request.html
@@ -1,18 +1,122 @@
-<!--
-  Generated template for the ViewAcceptedRequest page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>ViewAcceptedRequest</ion-title>
-  </ion-navbar>
-
+    <ion-toolbar>
+        <ion-title>
+            Detailed Request Information
+        </ion-title>
+        <ion-buttons start>
+            <button ion-button (click)="dismiss()">
+        <span ion-text color="primary" showWhen="ios">Cancel</span>
+        <ion-icon name="md-close" showWhen="android,windows"></ion-icon>
+      </button>
+        </ion-buttons>
+    </ion-toolbar>
 </ion-header>
 
-
 <ion-content padding>
+    <ion-grid *ngIf="transaction">
+        <ion-row>
+            <ion-col col-12>
+                <ion-title padding *ngIf="transaction?.owner_id != user?.id">Car Owner</ion-title>
+                <ion-title padding *ngIf="transaction?.owner_id == user?.id">User Information</ion-title>
+            </ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col col-4>
+                <ion-label color="primary">Name</ion-label>
+            </ion-col>
+            <ion-col col-8>
+                <ion-label *ngIf="transaction?.owner_id != user?.id">{{ transaction?.owner?.name }}</ion-label>
+                <ion-label *ngIf="transaction?.owner_id == user?.id">{{ transaction?.user?.name }}</ion-label>
+            </ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col col-4>
+                <ion-label color="primary">Phone Number</ion-label>
+            </ion-col>
+            <ion-col col-7>
+                <ion-label *ngIf="transaction?.owner_id != user?.id">
+                    {{ transaction?.owner?.phone }}
+                </ion-label>
+                <ion-label *ngIf="transaction?.owner_id == user?.id">
+                    {{ transaction?.user?.phone }}
+                </ion-label>
+            </ion-col>
+            <ion-col col-1>
+                <button *ngIf="transaction?.owner_id != user?.id" ion-button (click)="call(transaction?.owner?.phone)" color="secondary" clear><ion-icon name="call"></ion-icon></button>
+                <button *ngIf="transaction?.owner_id == user?.id" ion-button (click)="call(transaction?.user?.phone)" color="secondary" clear><ion-icon name="call"></ion-icon></button>
+            </ion-col>
+        </ion-row>
+
+
+        <ion-row>
+            <ion-col col-12>
+                <ion-title padding>Service Information</ion-title>
+            </ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col col-4>
+                <ion-label color="primary">Price</ion-label>
+            </ion-col>
+            <ion-col col-8>
+                <ion-label> RM {{ transaction.price }}</ion-label>
+            </ion-col>
+        </ion-row>
+        <ion-row *ngIf="transaction.request_type == 2">
+            <ion-col col-4>
+                <ion-label color="primary">Duration</ion-label>
+            </ion-col>
+            <ion-col col-8>
+                <ion-label>{{ transaction?.duration }} Hour</ion-label>
+            </ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col col-4>
+                <ion-label color="primary">Pickup Location</ion-label>
+            </ion-col>
+            <ion-col col-7>
+                <ion-label>
+                    {{ transaction.pickup_location }}
+                </ion-label>
+            </ion-col>
+            <ion-col col-1>
+                <button padding ion-button (click)="call(transaction?.user?.phone)" clear><ion-icon name="locate"></ion-icon></button>
+            </ion-col>
+        </ion-row>
+        <ion-row *ngIf="transaction.request_type == 1">
+            <ion-col col-4>
+                <ion-label color="primary">Destination</ion-label>
+            </ion-col>
+            <ion-col col-7>
+                <ion-label>
+                    {{ transaction?.location?.name }}
+                </ion-label>
+            </ion-col>
+            <ion-col col-1>
+                <button padding ion-button (click)="call(transaction?.user?.phone)" clear><ion-icon name="locate"></ion-icon></button>
+            </ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col col-4>
+                <ion-label color="primary">Pickup Time</ion-label>
+            </ion-col>
+            <ion-col col-8>
+                <ion-label>{{ transaction.pickup_time }}</ion-label>
+            </ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col col-12 *ngIf="transaction.status == 1">
+                <button ion-button full (click)="doneRequest(transaction.id)" color="primary">Done Request</button>
+            </ion-col>
+            <ion-col col-12 *ngIf="transaction.status == 2">
+                <button ion-button full color="dark">Print Receipt</button>
+            </ion-col>
+            <ion-col col-12 *ngIf="transaction.status == 0">
+                <button ion-button full color="danger" (click)="userCancelRequest(transaction.id)">Cancel Request</button>
+            </ion-col>
+            <!--<ion-col col-12 *ngIf="owner">
+                <button ion-button full color="danger" (click)="ownerCancelRequest(transaction.id)">Cancel Request</button>
+            </ion-col>-->
+        </ion-row>
+    </ion-grid>
 
 </ion-content>
